bin_PROGRAMS = miscd newpop3d chatd webmsgd
EXTRA_PROGRAMS = 
miscd_SOURCES = miscd.c
newpop3d_SOURCES = newpop3.c
chatd_SOURCES = station.c
webmsgd_SOURCES = webmsgd.c
LDADD=../.libs/libBBS.a ../.libs/libsystem.a ../.libs/libzmodem.a
#AM_LDFLAGS=-static
AM_CFLAGS=-DINVISIBLE -D_DETAIL_UINFO_ -DSHOW_IDLE_TIME -I$(top_builddir)/src
CLEANFILES=@EXTRA_CLEAN@
newpop3d_CFLAGS=$(AM_CFLAGS) @OPENSSL_INC@
newpop3d_LDADD=$(LDADD) @OPENSSL_LIBS@
