bin_PROGRAMS = miscd newpop3d chatd bbslogd bbssmsd
EXTRA_PROGRAMS = 
miscd_SOURCES = miscd.c
bbslogd_SOURCES = bbslogd.c
newpop3d_SOURCES = newpop3.c
chatd_SOURCES = station.c
bbssmsd_SOURCES = bbssmsd.c
LDADD=../libBBS/.libs/libBBS.a ../libsystem/.libs/libsystem.a ../rzsz/.libs/libzmodem.a 
#AM_LDFLAGS=-static
AM_CFLAGS=-DINVISIBLE -D_DETAIL_UINFO_ -DSHOW_IDLE_TIME -I$(top_builddir)/src 
CLEANFILES=@EXTRA_CLEAN@
newpop3d_CFLAGS=$(AM_CFLAGS) @OPENSSL_INC@
newpop3d_LDADD=$(LDADD) @OPENSSL_LIBS@
